--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/card1"
         android:layout_width="100dp"
         android:layout_height="160dp"
         app:srcCompat="@drawable/card"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp" />
+        app:layout_constraintTop_toTopOf="@+id/card2"
+        app:layout_constraintRight_toLeftOf="@+id/card2"
+        android:layout_marginRight="20dp" />
 
     <ImageView
         android:id="@+id/card2"
@@ -33,16 +23,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp" />
 
     <ImageView
         android:id="@+id/card3"
         android:layout_width="100dp"
         android:layout_height="160dp"
         app:srcCompat="@drawable/card"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp" />
+        app:layout_constraintTop_toTopOf="@+id/card2"
+        app:layout_constraintLeft_toRightOf="@+id/card2"
+        android:layout_marginLeft="20dp" />
 
 </android.support.constraint.ConstraintLayout>
