--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,24 @@
         app:layout_constraintLeft_toRightOf="@+id/card2"
         android:layout_marginLeft="20dp" />
 
+    <Button
+        android:id="@+id/shuffleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reshuffle Cards"
+        app:layout_constraintTop_toBottomOf="@+id/card2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="70dp" />
+
+    <TextView
+        android:id="@+id/meowText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tap a card to find the kitty..."
+        app:layout_constraintTop_toBottomOf="@+id/card2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="30dp" />
+
 </android.support.constraint.ConstraintLayout>
