--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:id="@+id/meowText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tap a card to find the kitty..."
+        android:text="Reshuffle and tap a card to find the kitty..."
         app:layout_constraintTop_toBottomOf="@+id/card2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
